--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -34,11 +34,12 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
+                <a class="nav-item nav-link" href="{% url 'post-create' %}">Novo Post</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Perfil</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
                 <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                <a class="nav-item nav-link" href="{% url 'register' %}">Registrar</a>
               {% endif %}
             </div>
           </div>
@@ -56,21 +57,7 @@
           {% endif %}
           {% block content %}{% endblock %}
         </div>
-        <div class="col-md-4">
-          <div class="content-section">
-            <h3>Barra Lateral</h3>
-            <p class='text-muted'>Adicionar qualquer coisa
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Últimos Posts</li>
-                <li class="list-group-item list-group-item-light">Anúncios</li>
-                <li class="list-group-item list-group-item-light">Calendários</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-              </ul>
-            </p>
-          </div>
-        </div>
-      </div>
-    </main>
+           </main>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
