--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,4 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    <h1>Sobre</h1>
+    <h1>Projeto em Django para me qualificar com Monitor da Escola de Inverno em Desenvolvimento Web com Python</h1>
 {% endblock content %}
